check all responsive section

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
                     <summary class="btn btn-sm bg-[#FF4240] hover:bg-orange-500 border-none"><i class='bx bx-menu text-xl text-white'></i></summary>
                     <ul class="menu dropdown-content bg-[#FF4240] rounded-box z-[1] w-52 p-2 shadow right-0">
                       <li><a class="text-xs text-slate-200" href="index.html">Home</a></li>
-                <li><a class="text-xs" href="#services">Services</a></li>
-                <li><a class="text-xs" href="#contact">Contact</a></li>
-                <li><a class="text-xs" href="#faqs">FAQs</a></li>
+                <li><a class="text-xs text-slate-200" href="#services">Services</a></li>
+                <li><a class="text-xs text-slate-200" href="#contact">Contact</a></li>
+                <li><a class="text-xs text-slate-200" href="#faqs">FAQs</a></li>
                     </ul>
                   </details>
                   
@@ -316,13 +316,6 @@
                       <p class="text-[10px] sm:text-[9px] md:text-[10px] lg:text-[11px] xl:text-sm 2xl:text-lg">Yes, most local governments require building permits for new construction. These permits ensure that your project complies with zoning laws and building codes. It’s essential to check with your local building authority for specific requirements</p>
                     </div>
                   </div>
-                  <div class="collapse collapse-arrow join-item border-base-300 border">
-                    <input type="radio" name="my-accordion-4" />
-                    <div class="collapse-title text-sm sm:text-xs md:text-[13px] lg:text-sm xl:text-lg 2xl:text-xl font-medium text-white bg-[#FF4240]">Can I customize my home design?</div>
-                    <div class="collapse-content">
-                      <p class="text-[10px] sm:text-[9px] md:text-[10px] lg:text-[11px] xl:text-sm 2xl:text-lg">Absolutely! Many builders offer customizable plans that allow you to tailor features such as layout, materials, and finishes to fit your preferences. Be sure to discuss your ideas with your builder early in the process to ensure they can accommodate your vision</p>
-                    </div>
-                  </div>
                 </div>
               </div>
              <!-- right end -->
@@ -344,7 +337,31 @@
            <div class="flex flex-col sm:flex-row justify-between items-center gap-5 sm:gap-3 md:gap-3 lg:gap-4 xl:gap-5 2xl:gap-6 mt-5">
             <!-- left start -->
              <div class="flex-1">
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt voluptas fugit distinctio. Quisquam odit quae id vero eaque, consequatur fuga.</p>
+              <ul class="space-y-3 md:space-y-1 lg:space-y-3 2xl:space-y-2">
+                <li><h3 class="text-xl sm:text-xl md:text-xl lg:text-2xl xl:text-3xl 2xl:text-3xl font-bold">Social Site</h3></li>
+                <li>
+                  <p class="text-xs sm:text-sm md:text-[11px] lg:text-sm xl:text-base 2xl:text-base">Facebook is a social networking platform that connects users with friends, family, and communities worldwide. It allows individuals to create personal profiles, share updates, photos, and videos, and join groups based on shared interests</p>
+                </li>
+                <li>
+                  <p class="text-xs sm:text-sm md:text-[11px] lg:text-sm xl:text-base 2xl:text-base">Instagram, known for its visual storytelling, focuses on sharing photos and videos through a user-friendly interface. It emphasizes aesthetics, allowing users to curate their feeds with carefully selected images and short videos</p>
+                </li>
+                <li class="flex items-center gap-2">
+                  <i class='text-[#FF4240] text-lg sm:text-lg lg:text-xl xl:text-2xl bx bxl-facebook-circle' ></i>
+                  <span class="text-xs sm:text-sm md:text-xs lg:text-sm xl:text-base 2xl:text-lg">faceSweetHome.com</span>
+                </li>
+                <li class="flex items-center gap-2">
+                  <i class='text-[#FF4240] text-lg sm:text-lg lg:text-xl xl:text-2xl bx bxl-twitter' ></i>
+                  <span class="text-xs sm:text-sm md:text-xs lg:text-sm xl:text-base 2xl:text-lg">twiSweetHome.com</span>
+                </li>
+                <li class="flex items-center gap-2">
+                  <i class='text-[#FF4240] text-lg sm:text-lg lg:text-xl xl:text-2xl bx bxl-instagram-alt' ></i>
+                  <span class="text-xs sm:text-sm md:text-xs lg:text-sm xl:text-base 2xl:text-lg">insSweetHome.com</span>
+                </li>
+                <li class="flex items-center gap-2">
+                  <i class='text-[#FF4240] text-lg sm:text-lg lg:text-xl xl:text-2xl bx bxl-linkedin-square'></i>
+                  <span class="text-xs sm:text-sm md:text-xs lg:text-sm xl:text-base 2xl:text-lg">linkSweetHome.com</span>
+                </li>
+              </ul>
              </div>
             <!-- left end -->
              <!-- right start -->
